src/pages/Clock/Clock.module.css
.content {
  height: 100%;
  display: grid;
  gap: 2em;
  grid-template-columns: 1fr 2fr 1fr;
  place-items: center;
}

.content > * {
  width: 100%;
  height: 100%;
  padding: 2em;
  background-color: white;
  box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.15);
  border-radius: 10px;
}

.subjectDisplay {
  display: flex;
  flex-direction: column;
  background-color: var(--color-primary);
}

.timerWrapper {
  display: grid;
  place-items: center;
  padding: 1em;
}

.sessionsWrapper {
  width: 100%;
  height: 100%;
  contain: size;
  display: flex;
  flex-direction: column;
  gap: 2em;
}

.sessions {
  padding: 1em;
  display: flex;
  flex-direction: column;
  gap: 1em;
  overflow: scroll;
}

.sessionItem,
.sessionBreak {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0em 1em;
  background-color: var(--color-primary);
  padding: 0.75em;
  border-radius: 10px;
}

.sessionItem p {
  color: white;
}

.sessionBreak {
  background-color: var(--color-accent-light);
}

.sessionBreak p {
  color: var(--color-accent-dark);
}

